<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_srl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.cast.AboutFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/birthday"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvBirthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/materialTextView"
                app:layout_constraintStart_toStartOf="@+id/materialTextView"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView"
                tools:text="@string/birthday" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/age"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvAge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/materialTextView3"
                app:layout_constraintStart_toStartOf="@+id/materialTextView3"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView3"
                tools:text="@string/number_age" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_begin="195dp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_begin="66dp"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/place_of_birth"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="@+id/tvBirthday"
                app:layout_constraintStart_toStartOf="@+id/tvBirthday"
                app:layout_constraintTop_toTopOf="@+id/guideline5" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvPlaceOfBirth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/materialTextView4"
                app:layout_constraintStart_toStartOf="@+id/materialTextView4"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView4"
                tools:text="@string/place_of_birth" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Department"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="@+id/tvAge"
                app:layout_constraintStart_toStartOf="@+id/tvAge"
                app:layout_constraintTop_toTopOf="@+id/guideline5" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvDepartment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/materialTextView5"
                app:layout_constraintStart_toStartOf="@+id/materialTextView5"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView5"
                tools:text="@string/acting" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/also"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                app:layout_constraintEnd_toEndOf="@+id/tvPlaceOfBirth"
                app:layout_constraintStart_toStartOf="@+id/tvPlaceOfBirth"
                app:layout_constraintTop_toTopOf="@+id/guideline7" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_begin="122dp"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvKnownAs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="@+id/materialTextView6"
                app:layout_constraintStart_toStartOf="@+id/materialTextView6"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView6"
                tools:text="@string/name_cast" />

            <LinearLayout
                android:id="@+id/llDeathDay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/tvDepartment"
                app:layout_constraintStart_toStartOf="@+id/tvDepartment"
                app:layout_constraintTop_toTopOf="@+id/guideline7">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deathDay"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDeadDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    tools:text="@tools:sample/date/ddmmyy" />

            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_begin="190dp"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/materialTextView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bioghrapy"
                app:layout_constraintEnd_toEndOf="@+id/tvKnownAs"
                app:layout_constraintStart_toStartOf="@+id/tvKnownAs"
                app:layout_constraintTop_toTopOf="@+id/guideline8" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvBioghraphy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/tvDepartment"
                app:layout_constraintStart_toStartOf="@+id/materialTextView9"
                app:layout_constraintTop_toBottomOf="@+id/materialTextView9"
                tools:text="@tools:sample/lorem/random" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>